terraform-aws-eks/09-aws-eks-lb/01-kube-manifest-ingress/01-nginx-app1-deployment-and-node-port-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: app3-nginx-deployment
    labels:
        app: app3-nginx
spec:
    replicas: 1
    selector:
        matchLabels:
            app: app3-nginx
    template:
        metadata:
            labels:
                app: app3-nginx
        spec:
            containers:
                - name: app3-nginx
                  image: stacksimplify/kubenginx:1.0.0
                  ports:
                      - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
    name: app3-nginx-nodeport-service
    labels:
        app: app3-nginx
    annotations:
#Important Note:  Need to add health check path annotations in service level if we are planning to use multiple targets in a load balancer
#    alb.ingress.kubernetes.io/healthcheck-path: /index.html
spec:
    type: NodePort
    selector:
        app: app3-nginx
    ports:
        - port: 80
          targetPort: 80
